[package]
name = "sprout"
version = "0.1.0"
authors = ["Eduardo Asafe <e@asafe.dev>"]
edition = "2021"

[dependencies]
itertools = "0.13.0"
mailjet-rs = "0.3.0"
tokio-postgres = "0.7.10"
serde_json = "1.0.117"
# Used by `Hyper` which is the HTTP request solution behind the Client
tokio = { version = "1", features = ["full"] }

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]